deploy/frontend-deployment.yaml
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  annotations:

spec:
  selector:
    matchLabels:
      app: guestbook
      tier: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
        tier: frontend
    spec:
      containers:
        - name: php-redis
          image: 264144530906.dkr.ecr.us-east-1.amazonaws.com/guestbook:23d38b9ffa3019fb4e1630af6041364ef52719aa
          # update image value with the image URI of the container registry
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 5000
