deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/group.name: capstone
    alb.ingress.kubernetes.io/group.order: "10"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /controller.js
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /guestbook.php?*
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
